--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
       href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css"
       rel="stylesheet"
     />
+    <link href="toastr.css" rel="stylesheet" />
+    <script src="toastr.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
